# self-improvement-app

./: .gitignore  AddTaskDialog.cpp  AddTaskDialog.h  CMakeLists.txt  Files.wxs  MainWindow.cpp  MainWindow.h  README.md  README_DEV.md  installer.wxs  main.cpp
